--- a/mine.html
+++ b/mine.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Crypto Mining Simulator Dashboard</title>
+
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+
+    <div class="container">
+
+        <h1>Crypto Mining Simulator Dashboard</h1>
+
+        <div class="blockchain">
+
+            <label for="blockchainSelect">Select a blockchain:</label>
+
+            <select id="blockchainSelect">
+
+                <option value="bitcoin">Bitcoin</option>
+
+                <option value="ethereum">Ethereum</option>
+
+                <option value="ripple">Ripple</option>
+
+                <!-- Add more options as needed -->
+
+            </select>
+
+        </div>
+
+        <div class="actions">
+
+            <button id="startBtn">Start Mining</button>
+
+            <button id="stopBtn" disabled>Stop Mining</button>
+
+        </div>
+
+        <div class="dashboard">
+
+            <h2>Mining Dashboard</h2>
+
+            <div id="coinAnimation"></div>
+
+            <p id="miningStatus">Select a blockchain and start mining.</p>
+
+            <p id="profitDisplay">Total Profit: 0 BTC</p>
+
+            <div class="graph">
+
+                <h3>Profit History</h3>
+
+                <div id="profitGraph" class="graph-container"></div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="script.js"></script>
+
+</body>
+
+</html>
 
