--- a/mine.html
+++ b/mine.html
@@ -8,7 +8,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Crypto Mining Simulator Dashboard</title>
+    <title>MINING DASHBOARD </title>
 
     <link rel="stylesheet" href="styles.css">
 
@@ -18,19 +18,19 @@
 
     <div class="container">
 
-        <h1>Crypto Mining Simulator Dashboard</h1>
+        <h1>MINING DASHBOARD</h1>
 
         <div class="blockchain">
 
-            <label for="blockchainSelect">Select a blockchain:</label>
+            <label for="blockchainSelect">SELECT TOKEN:</label>
 
             <select id="blockchainSelect">
 
-                <option value="bitcoin">Bitcoin</option>
+                <option value="bitcoin">FIXERCOIN</option>
 
-                <option value="ethereum">Ethereum</option>
+                <option value="ethereum">LOCKER</option>
 
-                <option value="ripple">Ripple</option>
+                <option value="ripple">PUSHER</option>
 
                 <!-- Add more options as needed -->
 
@@ -40,25 +40,25 @@
 
         <div class="actions">
 
-            <button id="startBtn">Start Mining</button>
+            <button id="startBtn">START MINE </button>
 
-            <button id="stopBtn" disabled>Stop Mining</button>
+            <button id="stopBtn" disabled>STOP MINING</button>
 
         </div>
 
         <div class="dashboard">
 
-            <h2>Mining Dashboard</h2>
+            <h2>MINING DASHBOARD</h2>
 
             <div id="coinAnimation"></div>
 
-            <p id="miningStatus">Select a blockchain and start mining.</p>
+            <p id="miningStatus">SELECT TOKEN AND START MINING.</p>
 
-            <p id="profitDisplay">Total Profit: 0 BTC</p>
+            <p id="profitDisplay">TOTAL PROFIT: 0 </p>
 
             <div class="graph">
 
-                <h3>Profit History</h3>
+                <h3>PROFIT HISTORY</h3>
 
                 <div id="profitGraph" class="graph-container"></div>
 
