--- a/mine.html
+++ b/mine.html
@@ -40,9 +40,9 @@
 
         <div class="actions">
 
-            <button id="startBtn">START MINE </button>
+            <button id="startBtn">▶️ MINE </button>
 
-            <button id="stopBtn" disabled>STOP MINING</button>
+            <button id="stopBtn" disabled>⏹️ STOP</button>
 
         </div>
 
