--- a/mine.html
+++ b/mine.html
@@ -67,6 +67,21 @@
         </div>
 
     </div>
+    <script>
+        function saveData() {
+  localStorage.setItem('FIXERCOIN');
+  localStorage.setItem('LOCKER');
+            localstorage.setItem('PUSHER');
+}
+
+function loadData() {
+  // Retrieve data from localStorage
+  let FIXERCOIN = localStorage.getItem('');
+  let LOCKER = localStorage.getItem('');
+    let PUSHER=localstorage.getItem('');
+  alert();
+}
+    </script>
 
     <script src="script.js"></script>
 
